<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">a_game_of_life</string>
    <string name="game_title">A Game of Life</string>

    <string name="btn_tap_to_begin">Begin Living</string>

    <string name="btn_start_game">Start Game</string>
    <string name="btn_tutorial">Tutorial</string>
    <string name="btn_options">Options</string>
    <string name="btn_achievements">Achievements</string>

    <string name="options_title">Options</string>
    <string name="options_music_label">Music Volume</string>
    <string name="options_sfx_label">Sound Effects Volume</string>
    <string name="options_theme_label">Color Theme</string>
    <string name="options_theme_dark_label">Dark</string>
    <string name="options_theme_light_label">Light</string>
    <string name="options_defaults_label">Restore Defaults</string>
    <string name="options_reset_label">Reset Game</string>

    <string name="mode_sel_1player">1P</string>
    <string name="mode_sel_2player">2P</string>

</resources>
