<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kn.game.OptionsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/options_title"
        android:textSize="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/oaTVmusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12.5dp"
            android:text="@string/options_music_label"/>
        <SeekBar
            android:id="@+id/oaSBmusic"
            android:layout_width="match_parent"
            android:layout_marginBottom="12.5dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/oaTVsfx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12.5dp"
            android:text="@string/options_sfx_label"/>
        <SeekBar
            android:id="@+id/oaSBsfx"
            android:layout_width="match_parent"
            android:layout_marginBottom="12.5dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/oaTVtheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12.5dp"
            android:text="@string/options_theme_label"/>

        <RadioGroup
            android:id="@+id/oaRGtheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12.5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/oaRBthemedark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/options_theme_dark_label"/>
            <RadioButton
                android:id="@+id/oaRBthemelight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/options_theme_light_label"/>

        </RadioGroup>

        <Button
            android:id="@+id/oaBTNdefaults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12.5dp"
            android:layout_marginBottom="12.5dp"
            android:text="@string/options_defaults_label"/>
        <Button
            android:id="@+id/oaBTNreset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12.5dp"
            android:layout_marginBottom="12.5dp"
            android:text="@string/options_reset_label"/>

    </LinearLayout>

</RelativeLayout>
